# edge-agents

./: .gitignore  README.md  launch.md  pyproject.toml
agent/: .env.example  agent.py  requirements.txt
src/app/: page.tsx
src/app/api/uploads/: route.ts
src/components/uploads/: UploadsPanel.tsx
src/lib/canvas/: state.ts  types.ts
