[project]
dependencies = []
name = "edge-agents"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
edge_agents = { path = ".", editable = true }


[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
protobuf = ">=6.32.1,<7"
pip = ">=25.3,<26"
pnpm = ">=10.22.0,<11"
